--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     text-align: center;
 }
 header {
-    background-color: #007bff;
+    background-color: #0a9538;
     color: white;
     padding: 1em 0;
 }
