--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* style.css */
+
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'SF Pro', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -31,3 +33,9 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+@font-face {
+    font-family: 'SF Pro';
+    src: url('./fonts/SF-Pro.ttf') format('truetype');
+}
+
+
